# examples

./: README  README.md
go/: .gitignore  Dockerfile  README.md  dev.sh  docker-compose.yml  go.mod  go.sum  main.go
go/.docker/: Dockerfile
go/templates/: index.html  payment_success.html
go/utils/: utils.go
java/: README.md  docker-compose.yml  pom.xml
java/.docker/: Dockerfile
net/: .env.example  .gitignore  Dockerfile  Program.cs  README.md  Tapsilat.Example.Net.csproj  dev.sh  docker-compose.yml
net/Controllers/: ApiController.cs  HomeController.cs
net/Models/: ErrorViewModel.cs  OrderViewModel.cs
net/Properties/: launchSettings.json
net/Views/: _ViewImports.cshtml
php/: .gitignore  Dockerfile  README.md  composer.json  dev.sh  docker-compose.yml
php/public/: api.php  index.php
php/src/: Utils.php
php/templates/: index.php  payment_failure.php
python/: .gitignore  Dockerfile  README.md  app.py  dev.sh  docker-compose.yml  requirements.txt
python/src/: utils.py
python/templates/: index.html  payment_failure.html  payment_success.html
react/: index.html  package-lock.json  package.json
react/src/: App.css  App.tsx  index.css
ruby/: .env.example  .gitignore  Gemfile  README.md  app.rb
ruby/views/: index.erb  payment_failure.erb  payment_success.erb
rust/: .env.example  Cargo.toml  README.md
rust/src/: main.rs
rust/static/: .gitkeep
rust/templates/: index.html  payment_failure.html  payment_success.html
typescript/: README.md  package-lock.json  package.json  tsconfig.json
woocommerce/: README.md  docker-compose.yml
(+15 files in other folders)
