[package]
name = "tapsilat-rust-example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tera = "1"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
tapsilat = { git = "https://github.com/tapsilat/tapsilat-rust", tag = "v2025.12.18" }
rand = "0.8"
env_logger = "0.10"
